Updated TODO, added contact form

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 * Draft posts should not have, or render at, a slug
 * Comb through settings to see if any unneeded features are enabled
 * Write a README
+* Failing to do captcha or message in contact form should have client side validation
